--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h2>Evil Superintelligence Inc.
         </h2>
         <p>
-            <b>Superintelligence is within our grasp.</b>
+            <b>Evil Superintelligence is within our grasp.</b>
         </p>
         <p>
 
